Actually fix portfolio link on mobile this time.

--- a/app/assets/stylesheets/reimagine2/challengepost/_global_nav_bar.sass
+++ b/app/assets/stylesheets/reimagine2/challengepost/_global_nav_bar.sass
@@ -97,6 +97,10 @@
     float: left
     margin-right: 1em
 
+  a
+    &.user
+      padding: 1.16em 1em 1.16em 1em
+
   @media #{$small}
     .top-bar-section .has-dropdown
 
@@ -123,7 +127,6 @@
 
       &.user
         padding: 1.16em 1em 0.75em 1em
-
 
       img.user-avatar
         display: inline-block !important
